--- a/client/components/common/layout/Header.module.css
+++ b/client/components/common/layout/Header.module.css
@@ -1,8 +1,29 @@
-.nav-link{
-    color:white;
-    text-decoration: none;
+.nav-link {
+  color: white;
+  text-decoration: none;
 }
-.nav-link:hover{
-    color:rgb(162, 161, 161);
-    text-decoration: underline;
+.nav-link:hover {
+  color: rgb(162, 161, 161);
+  text-decoration: underline;
+}
+.navbar_unstick {
+  position: static;
+}
+.navbar_sticky {
+  background: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 1px 1px 1px #222;
+  animation: moveDown 0.5s ease-in-out;
+}
+
+
+@keyframes moveDown {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0rem);
+  }
 }
